mostly stack stuff

--- a/editor/emacs.org
+++ b/editor/emacs.org
@@ -1,3 +1,5 @@
+- Videos: https://www.youtube.com/playlist?list=PLebcndvR-wlP0iyv46tqtOxS5wKEn9E-K
+
 - babel https://orgmode.org/worg/org-contrib/babel/
   - scraps http://eschulte.github.io/org-scraps/
   - gnuplot https://osiux.com/visualizando-org-mode-con-gnuplot.html
