--- a/languages/sh/awk/articles.org
+++ b/languages/sh/awk/articles.org
@@ -8,10 +8,15 @@
 - 17 | Comments About Shell, Awk, and Make https://www.oilshell.org/blog/2017/10/25.html
 - 18 | https://benhoyt.com/writings/goawk/
 - 19 | Using AWK and R to parse 25tb https://livefreeordichotomize.com/posts/2019-06-04-using-awk-and-r-to-parse-25tb/
+- 20 | The state of the AWK | Ben Hoyt https://lwn.net/Articles/820829/
+- 20 | awk BEGIN/END
+  https://jemma.dev/blog/awk-part-1
+  https://jemma.dev/blog/awk-part-2
 - 20 | https://ketancmaheshwari.github.io/posts/2020/05/24/SMC18-Data-Challenge-4.html
 - 21 | https://web.archive.org/web/20210505004021/https://portal.drewdevault.com/2021/05/03/awk-is-the-coolest-tool-you-dont-know.gmi
 - 22 | https://benhoyt.com/writings/goawk-compiler-vm/
 - https://github.com/freznicek/awesome-awk
+
 * 99 | Juergen Kahrs      | Network Administration with AWK
 
 https://www.linuxjournal.com/article/3132
