--- a/languages/stack/factor/articles.org
+++ b/languages/stack/factor/articles.org
@@ -1,5 +1,9 @@
 - https://www.junglecoder.com/blog/factorlang-review
 - https://re.factorcode.org/
 - https://re.factorcode.org/2014/04/scraping-re-factor.html
-- https://bluishcoder.co.nz/tags/factor/index.html
-- https://bluishcoder.co.nz/2020/04/18/fun-factor-libraries.html
+- https://docs.factorcode.org/content/article-handbook-library-reference.html
+- 12 https://re-factor.blogspot.com/2012/08/literate-programming.html
+- book of articles
+  https://bluishcoder.co.nz/tags/factor/index.html
+  https://bluishcoder.co.nz/factor-articles.pdf
+  https://github.com/doublec/factor-articles
