--- a/languages/stack/forth/books.org
+++ b/languages/stack/forth/books.org
@@ -1,3 +1,5 @@
+- https://leanpub.com/readevalprintlove003/read#leanpub-auto-russ-forth-a-simple-forth-in-ruby
+- Literate Programming in Forth  https://github.com/bradn123/literateforth
 - A Beginner's Guide to Forth | J.V. Noble https://web.archive.org/web/20180919061255/http://galileo.phys.virginia.edu/classes/551.jvn.fall01/primer.htm
 - http://skilldrick.github.io/easyforth/
 - https://www.ultratechnology.com/forth.htm
